# uadapy

./: .gitignore  CITATION.cff  LICENSE  README.md  Testing.ipynb  build_lib.sh  example.py  multi_dist_stippling.py  profiling_stippling.py  publish_lib.sh  pyproject.toml  requirements.txt  single_dist_stippling.py
.github/workflows/: docs.yml  pytest.yml
docs/: changelog.rst  conf.py  distribution.rst  examples.rst  index.rst  installation.rst  modules.rst  timeseries.rst  uadapy.data.rst  uadapy.dr.rst  uadapy.plotting.rst  uadapy.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  uadapy.doctree  uadapy.dr.doctree  uadapy.plotting.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  uadapy.dr.html  uadapy.html  uadapy.plotting.html
docs/_build/html/_sources/: uadapy.dr.rst.txt
examples/: datasets.ipynb  dimensionalityReduction.ipynb  interactive_weights_uapca.ipynb  ownData.ipynb  stippling.ipynb  uafourier.ipynb  uamds.ipynb  uapca.ipynb  uapca_revisited.ipynb  uastl.ipynb  upca.ipynb  vipurpca.ipynb  wgmm_uapca.ipynb
imuncertain/: data.py  distribution.py  test_distrib.py
imuncertain/dr/: uamds.py  uapca.py
imuncertain/plotting/: distribution_plot.py  interactive_splines.py  interactive_splom.py  plots2D.py  plotsND.py
imuncertain/tests/: test_distrib.py
tests/: api_consistency_test.py  test_distrib.py  test_gmm.py  test_plots1D.py  test_plots2D.py  test_plotsND.py  test_plotsTimeseries.py  test_plots_1d.py  test_plots_2d.py  test_plots_nd.py  test_plots_timeseries.py
uadapy/: __init__.py  data.py  distribution.py  test_distrib.py  timeseries.py
uadapy/data/: data.py
uadapy/distributions/: __init__.py  chi_square_comb.py  multivariate_gmm.py
uadapy/dr/: __init__.py  uamds.py  uapca.py  uapca_revisited.py  uastl.py  vipurpca.py  wgmm_uapca.py
uadapy/plotting/: boxplot.py  distribution_plot.py  interactive_splom.py  multi_class_halftoning.py  plots1D.py  plots2D.py  plotsND.py  plotsTimeSeries.py  plots_2d.py  plots_nd.py  plots_timeseries.py  shepard_diagram.py  stippling.py  utils.py
uadapy/temporal/: spectralAnalysis.py  uastl.py
uadapy/temporal/chi2comb/: libchi2comb.dylib
uadapy/uastl/: diverging_map.py  plot_dist.py  plot_distributionmtx.py  uastl.py  uastl_test.py
