[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "UADAPy"
version = "0.0.1"
description = "A software package for uncertainty-aware data analysis with Python"
authors = [
  { name = "David Hägele", email = "author@example.com" },
  { name = "Marina Evers", email = "author@example.com" },
  { name = "Ruben Bauer", email = "author@example.com" },
  { name = "Patrick Paetzold", email = "author@example.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/hageldave/uadapy"
"Bug Tracker" = "https://github.com/hageldave/uadapy/issues"

