[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

[project]
name = "UADAPy"
version = "0.0.3"
description = "A software package for uncertainty-aware data analysis with Python"
authors = [
  { name = "David Hägele", email = "haegele.david@gmail.com"},
  { name = "Marina Evers", email = "marina.evers@visus.uni-stuttgart.de"},
  { name = "Patrick Paetzold", email = "patrick.paetzold@uni-konstanz.de"},
  { name = "Ruben Bauer", email = "has@no.email"},
  { name = "Nikhil Bhavikatti", email = "has@no.email"},
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/UniStuttgart-VISUS/uadapy"
"Bug Tracker" = "https://github.com/UniStuttgart-VISUS/uadapy/issues"

